# fido

./: .gitignore  404.html  Makefile  README.md  index.html  pydoc-markdown.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: documentation.yml
assets/css/: styles.27bf5c28.css  styles.94cbeabc.css
assets/js/: 01a85c17.6122e174.js  04805bbc.101634b2.js  04805bbc.3d13008c.js  04805bbc.df3a44f8.js  04805bbc.ef3bcd38.js  0767b124.62465818.js  09d5ad39.608db5e5.js  09d5ad39.75bc5de7.js  09d5ad39.a8edf352.js  0e384e19.6749464a.js  0e384e19.733469dc.js  0e384e19.dd33db3a.js  0e384e19.ff35ce28.js  11be143e.08efa1ed.js  11be143e.6fb0c4f6.js  17896441.bcf36c6c.js  18c41134.f35d29ad.js  19747266.0c80c34d.js  19747266.13871c82.js  19747266.1cb1c78f.js  19747266.4204a7fc.js  19747266.a11e326a.js  19747266.f1826199.js  1be78505.6a672832.js  1be78505.d9f12da6.js  1e4232ab.40dd337b.js  1f391b9e.0d64b649.js  1f391b9e.f4e674ee.js  210.2f25d26d.js  210.ee23e310.js  2611.56dd3c07.js  2868cdab.0e2593ee.js  2868cdab.2c8b1df7.js  2868cdab.38925dca.js  2868cdab.d1acd611.js  2bbbc789.7ce6a9ad.js  2bbbc789.b794563a.js  2bbbc789.f64cde86.js  3570154c.3982d555.js  3570154c.9b4cf82b.js  (+170 more)
blog/: atom.xml  index.html  rss.xml
blog/hello-world/: index.html
docs/: docusaurus.config.js  package.json  sidebars.js
examples/: line_follower.py  simple_simulation.ipynb  simple_simulation.py
fido/: __init__.py  config.py  core.py  errors.py  time.py
markdown-page/: index.html
tests/: test_installfile.py  test_launchfile.py
(+96 files in other folders)
