[tool.poetry]
name = "fido"
version = "0.1.0"
description = "End-to-end platform for robot development"
authors = ["Julian Ho <julianho@brandeis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.4.4"
ipython = "^7.21.0"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.9.2"
black = "^20.8b1"
pylint = "^2.7.2"
pytest = "^6.2.2"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
