[tool.poetry]
name = "fido"
version = "0.1.0"
description = "End-to-end platform for robot development"
authors = ["Julian Ho <julianho@brandeis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.4.4"
ipython = "^7.21.0"
PyYAML = "^5.4.1"
roslibpy = "^1.2.0"
numpy = "^1.20.2"
vcstool = "^0.2.15"
rosinstall = "^0.7.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
pytest = "^6.2.2"
tox = "^3.23.0"
coverage = "^5.5"
flake8 = "^3.9.0"
mccabe = "^0.6.1"
mypy = "^0.812"
isort = "^5.8.0"
pydoc-markdown = ">=3.0.0,<4.0.0"
jupyterlab = "^3.0.15"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
